--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </ul>
             <div class="header-content">
                 <h4 class="header-subtitle">Hello, I am</h4>
-                <h1 class="header-title">Nishar</h1>
+                <h1 class="header-title">Nishar Alam</h1>
                 <h6 class="header-mono">Full-Stack Developer</h6>
                 <button class="btn btn-primary btn-rounded"><i class="ti-printer pr-2"></i><a href="/Nishar-Alam-Resume.pdf">Print
                         Resume</button></a>
